# FF-Neural-Network

./: CMakeLists.txt  main.cpp
rsc/: ActivationFunctions.cpp  ActivationFunctions.hpp  ActivationLayer.cpp  ActivationLayer.hpp  LayerDense.cpp  LayerDense.hpp  LayerWrapper.cpp  LayerWrapper.hpp  NeruralNetworkThread.cpp  NeruralNetworkThread.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Optimizer.cpp  Optimizer.hpp  OptimizerWrapper.cpp  OptimizerWrapper.hpp  ThreadDevice.cpp  ThreadDevice.hpp  WeightinitializationMethod.cpp  WeightinitializationMethod.hpp
